feat(auth-manager): implemented connection resource including tests (#7)
* chore(auth-manager)!: work in progress

* feat(auth-manager): implemented connection resource including tests

* test(auth-manager): fixed domain test

* refactor(auth-manager): extracted connection repository function

* fix(auth-manager): added comment about unntest
